# rawk

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
.github/workflows/: bench.yml  ci.yml  codeql.yml  release.yml  security.yml
src/: value.rs
src/interpreter/: builtins.rs  mod.rs
tests/: cli.rs  e2e.rs
