[package]
name = "awk-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"
description = "A 100% POSIX-compatible AWK implementation in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pegasusheavy/awk-rs"
keywords = ["awk", "text-processing", "cli", "posix"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
regex = "1"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
